<resources>
    <string name="app_name">MusicalStructure</string>
    <string name="now_playing_id">This is the activity where music is played. For the activity to be functional we need to use the mediaplayer class.</string>
    <string name="song_title">Juicy Lucy</string>
    <string name="artist"><![CDATA[Medeski Scofield Martin & Wood]]></string>
    <string name="album_id"><![CDATA[In this activity the songs in the user\'s device are categorized in albums. The albums will be presented in a recyclerView which will be populated by an ArrayList. The ArrayList will be populated by the MediaStore class]]></string>
    <string name="artists_id"><![CDATA[This activity contains all the artists that are found in the user\'s device. The artists list will be presented in a recyclerView which will be populated by an ArrayList. The ArrayList will be populated by the MediaStore class]]></string>
    <string name="songs_id"><![CDATA[In this activity all the songs in the user\'s device are presented in a recyclerView which will be populated by an ArrayList. The ArrayList will be populated by the MediaStore class]]></string>
    <string name="playlists_id"><![CDATA[This activity will contain the user\'s playlists. The playlists will be presented in a recyclerView which will be populated by an ArrayList.]]></string>
    <string name="artist2"><![CDATA[Medeski Scofield Martin & Wood]]></string>
    <string name="artist1">Lenny Kravitz</string>
    <string name="artist3">Portishead</string>
    <string name="artist4">Massive Attack</string>
    <string name="album1">Blue Lines - Massive Attack</string>
    <string name="playlist1">Trip Hop</string>
    <string name="playlist2">Rap - Hip Hop</string>
    <string name="playlist3">Rock Memories</string>
    <string name="playlist4">Music for Coding 2.0</string>
    <string name="playlist5">Chillout / Lounge / LoFi</string>
    <string name="Song1">Red Hot Chilli Peppers - Give it away</string>
    <string name="Song2">Prodigy - Firestarter</string>
    <string name="song3">Massive Attack - Unfinished Sympathy</string>
    <string name="song4">Tricky - Hell is round the corner</string>
    <string name="song5">Daft Punk - Get Lucky</string>
    <string name="albumbutton">albumButton</string>
    <string name="songbutton">songButton</string>
    <string name="artistbutton">artistButton</string>
    <string name="playlistbutton">playlistButton</string>
    <string name="nowplayingbutton">nowplayingButton</string>
    <string name="albums">Albums</string>
    <string name="songs">Songs</string>
    <string name="artists">Artists</string>
    <string name="playlists">Playlists</string>
    <string name="now_playing">Now Playing</string>
    <string name="rewind">rewind</string>
    <string name="play">play</string>
    <string name="fastforward">fastforward</string>
</resources>
